CBQE-3242 - test tuning, add KV fragmentation'
Change-Id: I0d71cb5df1946cfad9e91e87879d4747c0be50cb
Reviewed-on: http://review.couchbase.org/58970
Reviewed-by: Eric Cooper <ericcouchbase@gmail.com>
Tested-by: Eric Cooper <ericcouchbase@gmail.com>

--- a/perfSanity/tests/beta_tests.conf
+++ b/perfSanity/tests/beta_tests.conf
@@ -1,6 +1,7 @@
-perf_sanity_secondary_scanlatency_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_2M_perf_sanity_index":3.0}
-perf_sanity_secondary_scanlatency_stalefalse_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_stalefalse_2M_perf_sanity_index":8000}
-perf_sanity_n1ql_thr_Q2_2M_gsi_false.test hades.spec {"perf_sanity_n1ql_thr_Q2_2M_gsi_false_avg_query_requests_hades":240}
-perf_sanity_kv_drain_1M.test perf_sanity_base_test.spec {"perf_sanity_kv_drain_1M_perf_sanity_base_test":13.0}
+perf_sanity_secondary_scanlatency_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_2M_perf_sanity_index":1.8}
+perf_sanity_secondary_scanlatency_stalefalse_2M.test  perf_sanity_index.spec {"perf_sanity_secondary_scanlatency_stalefalse_2M_perf_sanity_index":6200}
+perf_sanity_n1ql_thr_Q2_2M_gsi_false.test hades.spec {"perf_sanity_n1ql_thr_Q2_2M_gsi_false_avg_query_requests_hades":25}
+perf_sanity_kv_drain_1M.test perf_sanity_base_test.spec {"perf_sanity_kv_drain_1M_perf_sanity_base_test":18.0}
 perf_sanity_reb_in_1M_dgm_kv.test perf_sanity_base_test.spec {"perf_sanity_reb_in_1M_dgm_kv_perf_sanity_base_test":1.4}
 perf_sanity_index_2M.test perf_sanity_base_test.spec {"perf_sanity_index_2M_initial_perf_sanity_base_test":1.5,"perf_sanity_index_2M_incremental_perf_sanity_base_test":0.2}
+kv_fragmentation_revAB_100K.test perf_sanity_base_test.spec {"kv_fragmentation_revAB_100K_perf_sanity_base_test":59.5,"kv_fragmentation_revAB_100K_perf_sanity_base_test_memcached_rss":9000}
