--- a/perfSanity/tests/beta_tests.conf
+++ b/perfSanity/tests/beta_tests.conf
@@ -4,4 +4,4 @@ perf_sanity_n1ql_thr_Q2_2M_gsi_false.test hades.spec {"perf_sanity_n1ql_thr_Q2_2
 perf_sanity_kv_drain_1M.test perf_sanity_base_test.spec {"perf_sanity_kv_drain_1M_perf_sanity_base_test":18.0}
 perf_sanity_reb_in_1M_dgm_kv.test perf_sanity_base_test.spec {"perf_sanity_reb_in_1M_dgm_kv_perf_sanity_base_test":1.4}
 perf_sanity_index_2M.test perf_sanity_base_test.spec {"perf_sanity_index_2M_initial_perf_sanity_base_test":1.5,"perf_sanity_index_2M_incremental_perf_sanity_base_test":0.2}
-kv_fragmentation_revAB_100K.test perf_sanity_base_test.spec {"kv_fragmentation_revAB_100K_perf_sanity_base_test":59.5,"kv_fragmentation_revAB_100K_perf_sanity_base_test_memcached_rss":9000}
+#kv_fragmentation_revAB_100K.test perf_sanity_base_test.spec {"kv_fragmentation_revAB_100K_perf_sanity_base_test":59.5,"kv_fragmentation_revAB_100K_perf_sanity_base_test_memcached_rss":9000}
