CBQE 3311: Add Q2 Perf Sanity
Change-Id: I2a23e05d58d69e97f3ce59b4d0900efcbe9ded98
Reviewed-on: http://review.couchbase.org/59065
Tested-by: Ketaki Gangal <ketaki@couchbase.com>
Reviewed-by: Eric Cooper <ericcouchbase@gmail.com>

--- a/perfSanity/tests/beta_tests.conf
+++ b/perfSanity/tests/beta_tests.conf
@@ -5,3 +5,4 @@ perf_sanity_kv_drain_1M.test perf_sanity_base_test.spec {"perf_sanity_kv_drain_1
 perf_sanity_reb_in_1M_dgm_kv.test perf_sanity_base_test.spec {"perf_sanity_reb_in_1M_dgm_kv_perf_sanity_base_test":1.4}
 perf_sanity_index_2M.test perf_sanity_base_test.spec {"perf_sanity_index_2M_initial_perf_sanity_base_test":1.5,"perf_sanity_index_2M_incremental_perf_sanity_base_test":0.2}
 #kv_fragmentation_revAB_100K.test perf_sanity_base_test.spec {"kv_fragmentation_revAB_100K_perf_sanity_base_test":59.5,"kv_fragmentation_revAB_100K_perf_sanity_base_test_memcached_rss":9000}
+perf_sanity_n1ql_thr_lat_Q2_1M_gsi_false.test perf_sanity_n1ql_test.spec {"perf_sanity_n1ql_thr_lat_Q2_1M_gsi_false_avg_query_requests_perf_sanity_n1ql_test":20,"perf_sanity_n1ql_thr_lat_Q2_1M_gsi_false_perf_sanity_n1ql_test":9000}
