CBQE: 1686 changes for requirement in perfrunner
Change-Id: Ib79f7cb2916e3cbe396e3bbc9e440861e8882ebf
Reviewed-on: http://review.couchbase.org/59908
Reviewed-by: sandip nandi <sandip.nandi@couchbase.com>
Tested-by: sandip nandi <sandip.nandi@couchbase.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 git+https://github.com/couchbaselabs/btrc.git#get=btrc
-git+https://github.com/couchbase/cbagent.git#egg=cbagent
+git+https://github.com/sandipnd/cbagent.git#egg=cbagent
 celery==3.0.24
 couchbase==1.2.1
 decorator
@@ -17,6 +17,6 @@ requests==2.1.0
 seriesly
 sqlalchemy==0.9.4
 urllib3==1.10.4
-git+https://github.com/andreibaranouski/spring.git#egg=spring
+git+https://github.com/couchbase/spring#egg=spring
 git+https://github.com/couchbaselabs/tap.git#egg=tap
 git+https://github.com/couchbaselabs/python-dcp-client.git#egg=dcp-client
