Enable check for Python imports
Change-Id: I004c9671604c5eb80a81cb37200a6e6c2767c3e8
Reviewed-on: http://review.couchbase.org/65076
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ decorator
 pycrypto==2.6.1
 fabric==1.8.0
 flake8==2.6.0
+isort==4.2.5
 jinja2==2.7.2
 logger
 git+https://github.com/couchbaselabs/mc_bin_client.git#egg=mc_bin_client
