--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ git+https://github.com/couchbaselabs/btrc.git#get=btrc
 git+https://github.com/couchbase/cbagent.git#egg=cbagent
 celery==3.0.24
 couchbase==1.2.1
+cryptography==1.4
 decorator
 pycrypto==2.6.1
 fabric==1.8.0
@@ -14,7 +15,7 @@ funcsigs
 mock==1.1.2
 nose==1.3.1
 networkx==1.9
-numpy
+numpy==1.11.0
 pep8-naming==0.3.3
 requests==2.1.0
 seriesly
