--- a/scripts/config_scanthr_sessionconsistent_memdb.json
+++ b/scripts/config_scanthr_sessionconsistent_memdb.json
@@ -1,13 +1,13 @@
 {
-       "Concurrency" : 30,
-       "Clients" : 1,
+       "Concurrency" : 128,
+       "Clients" : 5,
        "ScanSpecs" : [
           {
-             "Limit" : 1        ,
+             "Limit" : 1,
              "Low" : [
                 "000015"
              ],
-             "Repeat" : 9999999,
+             "Repeat" : 999999,
              "Type" : "Range",
              "Bucket" : "bucket-1",
              "High" : [
@@ -16,7 +16,7 @@
              "Id" : 1,
              "Inclusion" : 3,
              "Index" : "myindex",
-             "NInterval" : 100
+             "Consistency" : true
            }
        ]
 }
