Add Ansible playbook for initial server configuration
Change-Id: I1c6c31538d48c91b698e13e57ec24be33117200b
Reviewed-on: http://review.couchbase.org/65320
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 git+https://github.com/couchbaselabs/btrc.git#get=btrc
 git+https://github.com/couchbase/cbagent.git#egg=cbagent
+ansible==2.1.0.0
 celery==3.1.23
 couchbase==1.2.1
 cryptography==1.4
