Add libssl-dev to client dependencies
Change-Id: I63808d2b884494a27a29fbcb4f923d909b67dbe8
Reviewed-on: http://review.couchbase.org/65408
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/playbooks/clients.yml
+++ b/playbooks/clients.yml
@@ -8,6 +8,7 @@
       - git
       - htop
       - libffi-dev
+      - libssl-dev
       - openjdk-8-jdk
       - python-pip
       - python-virtualenv
