--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,6 @@ pep8-naming==0.3.3
 requests==2.1.0
 seriesly
 sqlalchemy==0.9.4
+twisted==16.2.0
 urllib3==1.10.4
-git+https://github.com/couchbase/spring.git#egg=spring
 git+https://github.com/couchbaselabs/python-dcp-client.git#egg=dcp-client
