--- a/playbooks/clients.yml
+++ b/playbooks/clients.yml
@@ -13,6 +13,7 @@
       - python-pip
       - python-virtualenv
       - python3.5-dev
+      - rpm2cpio
   - apt: deb=http://packages.couchbase.com/releases/couchbase-release/couchbase-release-1.0-2-amd64.deb
   - apt: name={{item}} update_cache=yes
     with_items:
