Change ownership of /index only if it exists
Change-Id: Ia7bc35f706ebcbdc64e520b704303506090a8376
Reviewed-on: http://review.couchbase.org/65884
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/playbooks/init.yml
+++ b/playbooks/init.yml
@@ -32,4 +32,7 @@
 
 - hosts: kv
   tasks:
+  - stat: path=/index
+    register: index
   - file: path=/index owner=couchbase group=couchbase
+    when: index.stat.exists
