Add standalone server for FDB benchmarks
Change-Id: Id1d28391a6653304632b48ca06acca175d85d57d
Reviewed-on: http://review.couchbase.org/66872
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/playbooks/fdb.yml
+++ b/playbooks/fdb.yml
@@ -5,6 +5,8 @@
     with_items:
       - cmake
       - gcc-c++
+      - git
+      - java-1.8.0-openjdk
       - libaio-devel
       - python-virtualenv
       - snappy-devel
