Add tools for configuration of CPU governing
Change-Id: I7a2e1ad8076aa3c1d382983b1dd3ab57fe0f35a1
Reviewed-on: http://review.couchbase.org/66994
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/playbooks/clients.yml
+++ b/playbooks/clients.yml
@@ -5,10 +5,12 @@
   - apt: name={{item}} update_cache=yes
     with_items:
       - atop
+      - cpufrequtils
       - git
       - htop
       - libffi-dev
       - libssl-dev
+      - linux-tools-generic
       - openjdk-8-jdk
       - python-pip
       - python-virtualenv
