--- a/scripts/config_scanlatency_sessionconsistent_multiple_moi.json
+++ b/scripts/config_scanlatency_sessionconsistent_multiple_moi.json
@@ -53,7 +53,7 @@
           {
              "Type" : "All",
              "Limit" : 1,
-             "Repeat" : 9999,
+             "Repeat" : 9999999,
              "Bucket" : "bucket-1",
              "Id" : 1,
              "Index" : "myindex4"
@@ -61,7 +61,7 @@
           {
              "Type" : "All",
              "Limit" : 1,
-             "Repeat" : 9999,
+             "Repeat" : 9999999,
              "Bucket" : "bucket-1",
              "Id" : 1,
              "Index" : "myindex5"
