--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 ansible==2.1.0.0
 awscli==1.10.58
 celery==3.1.23
-couchbase==2.1.0
 cffi==1.7.0
+couchbase==2.1.0
 cryptography==1.4
 decorator
 pycrypto==2.6.1
@@ -22,3 +22,5 @@ seriesly
 sqlalchemy==0.9.4
 twisted==16.2.0
 urllib3==1.10.4
+
+git+https://github.com/couchbaselabs/mc_bin_client.git#egg=mc_bin_client
