CBPS-170: Add sshpass to client dependencies
Change-Id: Iff7538b20b0f8deb8a05c43182d0ee6db920eaf2
Reviewed-on: http://review.couchbase.org/67647
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>
Tested-by: buildbot <build@couchbase.com>

--- a/playbooks/clients.yml
+++ b/playbooks/clients.yml
@@ -15,6 +15,7 @@
       - python-pip
       - python-virtualenv
       - python3.5-dev
+      - sshpass
       - rpm2cpio
   - apt: deb=http://packages.couchbase.com/releases/couchbase-release/couchbase-release-1.0-2-amd64.deb
   - apt: name={{item}} update_cache=yes
