Always name Ansible tasks
Change-Id: I3c722e248e1413bd78adac692523022751348e04
Reviewed-on: http://review.couchbase.org/67648
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>
Tested-by: buildbot <build@couchbase.com>

--- a/playbooks/fdb.yml
+++ b/playbooks/fdb.yml
@@ -1,7 +1,8 @@
 ---
 - hosts: kv
   tasks:
-  - yum: state=latest name={{item}}
+  - name: installing additional packages
+    yum: state=latest name={{item}}
     with_items:
       - cmake
       - gcc-c++
