--- a/playbooks/clients.yml
+++ b/playbooks/clients.yml
@@ -1,8 +1,10 @@
 ---
 - hosts: clients
   tasks:
-  - apt: upgrade=dist
-  - apt: name={{item}} update_cache=yes
+  - name: upgrading packages on the system
+    apt: upgrade=dist
+  - name: installing additional packages
+    apt: name={{item}} update_cache=yes
     with_items:
       - atop
       - cpufrequtils
@@ -17,8 +19,10 @@
       - python3.5-dev
       - sshpass
       - rpm2cpio
-  - apt: deb=http://packages.couchbase.com/releases/couchbase-release/couchbase-release-1.0-2-amd64.deb
-  - apt: name={{item}} update_cache=yes
+  - name: adding Couchbase repository
+    apt: deb=http://packages.couchbase.com/releases/couchbase-release/couchbase-release-1.0-2-amd64.deb
+  - name: installing libcouchbase
+    apt: name={{item}} update_cache=yes
     with_items:
     - build-essential
     - libcouchbase-dev
