Disable scheduled trim cron jobs on client machines
Change-Id: I63704367731d2c4711548e8050959a819f25d428
Reviewed-on: http://review.couchbase.org/67845
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/playbooks/clients.yml
+++ b/playbooks/clients.yml
@@ -27,3 +27,5 @@
     - build-essential
     - libcouchbase-dev
     - libcouchbase2-bin
+  - name: disabling scheduled fstrim jobs
+    file: path=/etc/cron.weekly/fstrim state=absent
