CBPS-190: Restructuring standalone fdb test Added build url in showfast.
Change-Id: I6b9a0abbecfc2d8b2fe4df76352056e04d94f67f
Reviewed-on: http://review.couchbase.org/67938
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,5 +21,6 @@ seriesly
 sqlalchemy==0.9.4
 twisted==16.2.0
 urllib3==1.10.4
+xmltodict
 
 git+https://github.com/couchbaselabs/mc_bin_client.git#egg=mc_bin_client
