--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ couchbase==2.1.0
 cryptography==1.4
 decorator
 pycrypto==2.6.1
-fabric==1.11.1
+fabric3==1.12.0.post1
 flake8==3.0.4
 isort==4.2.5
 jinja2==2.7.2
