CBPS-164: Adding DCP standalone test
Change-Id: I19a3fc46fb3a6f2af8ef7062ebbf0b8d32a322bd

Sorting imports and declaring variable in Makefile

Change-Id: Ie3111ae572acfd15ccfd84b97511a9713451b99a

Incorporating review comments

Change-Id: If196421aa3fde7debb32564ede880b211c88b83e

adding yml for installing go
cleaning dcp.py
adding replica number=0 in test file

Change-Id: I131ec6722879d8f99878dc2f3a6df088845366ab

Changing the way we run command for dcptest

Change-Id: I3a7ea57b025c5fbe44dc94e4f1ae74a657e01e8e

Incorporating review comments

Change-Id: I80173f3f6c62d86dabe8e84975b2abafed2a9766
Reviewed-on: http://review.couchbase.org/69724
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/playbooks/clients.yml
+++ b/playbooks/clients.yml
@@ -28,3 +28,7 @@
     - libcouchbase2-bin
   - name: disabling scheduled fstrim jobs
     file: path=/etc/cron.weekly/fstrim state=absent
+  - name: installing golang
+    apt: name={{item}} update_cache=yes
+    with_items:
+    - golang-go
