CBPS-207: Change location of core dumps
Change-Id: I3d3dfde10e88c128e1b3e8db2a0ebca3659db130
Reviewed-on: http://review.couchbase.org/69981
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>
Tested-by: buildbot <build@couchbase.com>

--- a/playbooks/init.yml
+++ b/playbooks/init.yml
@@ -48,3 +48,11 @@
   - name: creating the "/index" directory
     file: path=/index owner=couchbase group=couchbase
     when: index.stat.exists
+
+- hosts: kv:index:n1ql
+  tasks:
+   - name: changing location of core dumps
+     sysctl:
+      name: kernel.core_pattern
+      value: /data/core-%e-%p
+      state: present
