Create new filesystem on devices that already has filesystem.
Change-Id: I3c36fa33ca1d436f3481e896e0ce16f970b911eb
Reviewed-on: http://review.couchbase.org/70121
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/playbooks/trim.yml
+++ b/playbooks/trim.yml
@@ -11,6 +11,7 @@
     filesystem:
       fstype: ext4
       dev: /dev/sdb1
+      force: yes
   - name: mounting data parition
     mount:
       name: /data
