CBPS-243: Parametrize filesystem type
Change-Id: I8cc75b1bb6a823c4bf65415cf01697961cfc4b6f
Reviewed-on: http://review.couchbase.org/71213
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/playbooks/trim.yml
+++ b/playbooks/trim.yml
@@ -6,10 +6,10 @@
       name: /data
       state: unmounted
       src: /dev/sdb1
-      fstype: ext4
+      fstype: {{ fstype | default(ext4) }}
   - name: re-creating filesystem
     filesystem:
-      fstype: ext4
+      fstype: {{ fstype | default(ext4) }}
       dev: /dev/sdb1
       force: yes
   - name: mounting data parition
@@ -17,7 +17,7 @@
       name: /data
       state: mounted
       src: /dev/sdb1
-      fstype: ext4
+      fstype: {{ fstype | default(ext4) }}
   - name: discarding unused blocks
     shell: fstrim -v /data
   - name: ensuring ownership of "/data" directory
