--- a/playbooks/clients.yml
+++ b/playbooks/clients.yml
@@ -19,6 +19,7 @@
       - python-virtualenv
       - sshpass
       - rpm2cpio
+      - nvi
   - name: adding Couchbase repository
     apt: deb=http://packages.couchbase.com/releases/couchbase-release/couchbase-release-1.0-2-amd64.deb
   - name: installing libcouchbase
