Fix gitignore rules to golang projects
Change-Id: I8e7b516b8549dfcf65c5bb69f6f18db8893ed6bc
Reviewed-on: http://review.couchbase.org/73838
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -35,10 +35,15 @@ nosetests.xml
 .pydevproject
 
 # PyCharm
-*.idea
+*.idea/
 
-env
+env/
 
 vendor/github.com
+
+cbindexperf
+!cbindexperf/
 dcptest
+!dcptest/
 kvgen
+!kvgen/
