--- a/playbooks/clients.yml
+++ b/playbooks/clients.yml
@@ -19,6 +19,7 @@
       - openjdk-8-jdk
       - python-pip
       - python-virtualenv
+      - python3-dev
       - sshpass
       - rpm2cpio
   - name: adding Couchbase repository
@@ -29,5 +30,6 @@
     - build-essential
     - libcouchbase-dev
     - libcouchbase2-bin
+    - libcouchbase2-libevent
   - name: disabling scheduled fstrim jobs
     file: path=/etc/cron.weekly/fstrim state=absent
