--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-ansible==2.1.0.0
+ansible==2.2.1.0
 awscli==1.10.58
+billiard==3.5.0.2
 celery==3.1.25
 cffi==1.7.0
 couchbase==2.2.1
@@ -16,9 +17,9 @@ numpy==1.12.1
 pep8-naming==0.4.1
 psutil==5.2.0
 requests==2.13.0
-seriesly
 sqlalchemy==0.9.4
 twisted==16.2.0
 xmltodict
 
-git+https://github.com/couchbaselabs/mc_bin_client.git#egg=mc_bin_client
+git+https://github.com/couchbaselabs/mc_bin_client.git@py3#egg=mc_bin_client
+git+https://github.com/pavel-paulau/seriesly-python-client.git#egg=seriesly
