--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,6 @@ cffi==1.7.0
 couchbase==2.2.1
 cryptography==1.4
 decorator
-pycrypto==2.6.1
 fabric3==1.13.1.post1
 flake8==3.3.0
 isort==4.2.5
@@ -16,6 +15,8 @@ networkx==1.9
 numpy==1.12.1
 pep8-naming==0.4.1
 psutil==5.2.0
+pycrypto==2.6.1
+python-dateutil==2.6.0
 requests==2.13.0
 sqlalchemy==1.1.7
 twisted==16.2.0
