Add a playbook for installing Apache Cassandra
Change-Id: I882b5f9cc0e80a734a4b0c3a34efbce20d44b323
Reviewed-on: http://review.couchbase.org/76724
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/playbooks/uninstall.yml
+++ b/playbooks/uninstall.yml
@@ -11,17 +11,18 @@
      - couch_view_index_updater
      - goport
      - goxdcr
+     - java
      - indexer
      - memcached
      - moxi
   - name: uninstalling the Couchbase Server package
     yum: name=couchbase-server state=absent
-  - name: remove Couchbase Server files
+  - name: removing Couchbase Server files
     file: path=/opt/couchbase state=absent
 
 - hosts: kv:index:n1ql
   tasks:
-  - name: Removing the files remaining in the "/data" directory
+  - name: removing the files remaining in the "/data" directory
     shell: rm -fr /data/*
 
 - hosts: kv
