Remove Couchbase packages after installation
Change-Id: Ie6d2027472986afac198309d2abb51902a548e95
Reviewed-on: http://review.couchbase.org/76847
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/playbooks/cassandra_logs.yml
+++ b/playbooks/cassandra_logs.yml
@@ -6,19 +6,19 @@
   - name: creating a temporary directory
     tempfile:
       state: directory
-    register: result
+    register: temp
 
   - name: archiving the database logs
     archive:
       path: "{{ cassandra_home }}/logs"
-      dest: "{{ result.path }}/{{ inventory_hostname }}.zip"
+      dest: "{{ temp.path }}/{{ inventory_hostname }}.zip"
       format: zip
 
   - name: downloading the remote logs
     fetch:
-      src: "{{ result.path }}/{{ inventory_hostname }}.zip"
+      src: "{{ temp.path }}/{{ inventory_hostname }}.zip"
       dest: ../
       flat: yes
 
   - name: removing temporary files
-    file: path={{ result.path }} state=absent
+    file: path={{ temp.path }} state=absent
