Changes to use go version 1.8 and getting latest changes from indexing/cbindexperf
Change-Id: Id0664417354a4a5bbd0c4365b8dc724242b3fa41

Adding go-curl in makefile

Change-Id: Ie7c690702abdc01de8b778eb21fe76291150ef20

Adding go-curl in vendor.json instead of Makefile

Change-Id: Icb43b3a6fff02f97202e2457676fe1e9dd456567

Incorporating review comments

Change-Id: I9418fb39cf5a18f4d958ace52abb14e9886c3102
Reviewed-on: http://review.couchbase.org/79403
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/playbooks/clients.yml
+++ b/playbooks/clients.yml
@@ -22,6 +22,7 @@
       - python3-dev
       - sshpass
       - rpm2cpio
+      - libcurl4-openssl-dev
   - name: adding Couchbase repository
     apt: deb=http://packages.couchbase.com/releases/couchbase-release/couchbase-release-1.0-2-amd64.deb
   - name: installing libcouchbase
