Add Windows boxes to Ansible inventory
Change-Id: I23290a936e73b20bfc81799cc75a6435c39a0650
Reviewed-on: http://review.couchbase.org/79525
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/clusters/zeus.ini
+++ b/clusters/zeus.ini
@@ -1,7 +1,17 @@
+[kv]
+172.23.96.25
+172.23.96.26
+172.23.96.27
+172.23.96.28
+
+[n1ql]
+172.23.100.210
+172.23.100.211
+
 [clients]
-172.23.100.212
+172.23.100.212  ansible_user=root ansible_ssh_pass=couchbase
 
 [all:vars]
-ansible_user=root
-ansible_ssh_pass=couchbase
+ansible_user=Administrator
+ansible_ssh_pass=Membase123
 ansible_ssh_common_args='-o StrictHostKeyChecking=no'
