Check compliance with PEP 257
See also: https://pypi.python.org/pypi/pep257

Change-Id: If420b8333b6ea5c21efb693ee46da8eecd1958c5
Reviewed-on: http://review.couchbase.org/80126
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ networkx==1.9
 numpy==1.12.1
 pep8-naming==0.4.1
 psutil==5.2.0
+pydocstyle==2.0.0
 pycrypto==2.6.1
 python-dateutil==2.6.0
 requests==2.1.0
