--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 ansible==2.3.0.0
-apache-libcloud
+apache-libcloud==2.0.0
 awscli==1.10.58
 billiard==3.5.0.2
 celery==3.1.25
@@ -7,7 +7,7 @@ cffi==1.7.0
 couchbase==2.2.1
 coverage==4.3.4
 cryptography==1.4
-decorator
+decorator==4.0.11
 fabric3==1.13.1.post1
 flake8==3.3.0
 isort==4.2.15
@@ -24,7 +24,7 @@ sqlalchemy==1.1.7
 twisted==16.2.0
 urllib3==1.20
 validators==0.11.3
-xmltodict
+xmltodict==0.11.0
 
 git+https://github.com/couchbaselabs/mc_bin_client.git@py3#egg=mc_bin_client
 git+https://github.com/pavel-paulau/seriesly-python-client.git#egg=seriesly
