--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ decorator==4.0.11
 fabric3==1.13.1.post1
 flake8==3.3.0
 isort==4.2.15
+jinja2==2.9.6
 nose==1.3.1
 networkx==1.9
 numpy==1.12.1
@@ -27,4 +28,5 @@ validators==0.11.3
 xmltodict==0.11.0
 
 git+https://github.com/couchbaselabs/mc_bin_client.git@py3#egg=mc_bin_client
+git+https://github.com/mattrobenolt/jinja2-cli.git#egg=jinja2-cli
 git+https://github.com/pavel-paulau/seriesly-python-client.git#egg=seriesly
