Install kernel-devel and kernel-headers packages on server nodes
Change-Id: I064da3beb1cc59af01c5e96b5f9c6b781d536e7d
Reviewed-on: http://review.couchbase.org/81529
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/playbooks/init.yml
+++ b/playbooks/init.yml
@@ -13,6 +13,8 @@
       - htop
       - iotop
       - iperf
+      - kernel-devel
+      - kernel-headers
       - java-1.8.0-openjdk
       - lsof
       - moreutils
