--- a/playbooks/clients.yml
+++ b/playbooks/clients.yml
@@ -23,6 +23,7 @@
       - sshpass
       - rpm2cpio
       - libcurl4-openssl-dev
+      - memcached
   - name: adding Couchbase repository
     apt: deb=http://packages.couchbase.com/releases/couchbase-release/couchbase-release-1.0-2-amd64.deb
   - name: installing libcouchbase
