Terminate and uninstall all server packages
Change-Id: Idc35c25c504da1f0dda0be312da0e8fa20e63303
Reviewed-on: http://review.couchbase.org/83525
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/playbooks/uninstall.yml
+++ b/playbooks/uninstall.yml
@@ -8,20 +8,25 @@
   - name: killing the processes
     shell: 'killall -I -g -q -s SIGKILL {{item}} || true'
     with_items:
-     - epmd
-     - beam.smp
-     - cbq-engine
-     - cbft
-     - couch_view_index_updater
-     - goport
-     - goxdcr
-     - java
-     - indexer
-     - memcached
-     - moxi
+      - epmd
+      - beam.smp
+      - cbq-engine
+      - cbft
+      - couch_view_index_updater
+      - goport
+      - goxdcr
+      - java
+      - indexer
+      - memcached
+      - moxi
+      - mongod
+      - mongos
 
-  - name: uninstalling the Couchbase Server package
-    yum: name=couchbase-server state=absent
+  - name: uninstalling the database packages
+    yum: state=absent name={{item}}
+    with_items:
+      - 'couchbase*'
+      - 'mongodb*'
 
   - name: removing Couchbase Server files
     file: path={{ couhcbase_home }} state=absent
