Add playbook for MariaDB
Change-Id: I4a22692c163577ea5d6062e010a544479f5ad125
Reviewed-on: http://review.couchbase.org/83526
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/playbooks/uninstall.yml
+++ b/playbooks/uninstall.yml
@@ -21,12 +21,14 @@
       - moxi
       - mongod
       - mongos
+      - mysqld
 
   - name: uninstalling the database packages
     yum: state=absent name={{item}}
     with_items:
       - 'couchbase*'
       - 'mongodb*'
+      - 'MariaDB*'
 
   - name: removing Couchbase Server files
     file: path={{ couhcbase_home }} state=absent
