Remove MySQL installation
Change-Id: I2ae58f419c120ffea23712ebe35e82f7475dd03e
Reviewed-on: http://review.couchbase.org/83699
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/playbooks/uninstall.yml
+++ b/playbooks/uninstall.yml
@@ -42,3 +42,6 @@
   - name: removing the files remaining in the "{{ index_dir }}" directory
     shell: rm -fr {{ index_dir }}/*
     when: index.stat.exists
+
+  - name: removing MySQL installation (if any)
+    shell: rm -fr /var/lib/mysql
