Implement documents with lower compressibility
Change-Id: If59566a131fe46fc246356b8469648ada86d890d
Reviewed-on: http://review.couchbase.org/84394
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/playbooks/clients.yml
+++ b/playbooks/clients.yml
@@ -12,6 +12,7 @@
       - golang-go
       - htop
       - libffi-dev
+      - libsnappy-dev
       - libssl-dev
       - linux-tools-generic
       - maven
