--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ pep8-naming==0.4.1
 psutil==5.2.2
 pydocstyle==2.0.0
 pycrypto==2.6.1
+python-snappy==0.5.1
 requests==2.1.0
 spooky==2.0.0
 sqlalchemy==1.1.7
