--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ psutil==5.2.2
 pydocstyle==2.0.0
 pycrypto==2.6.1
 requests==2.1.0
+spooky==2.0.0
 sqlalchemy==1.1.7
 twisted==16.2.0
 urllib3==1.20
