CBPS-407: Use FQDN in cluster specifications
Change-Id: Iec5aead018664051fc00b8e2df06af76aaa7fa52
Reviewed-on: http://review.couchbase.org/85145
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/clusters/triton.ini
+++ b/clusters/triton.ini
@@ -1,17 +1,17 @@
 [kv]
-172.23.132.17
-172.23.132.18
-172.23.132.19
-172.23.132.20
+triton-srv-01.perf.couchbase.com
+triton-srv-02.perf.couchbase.com
+triton-srv-03.perf.couchbase.com
+triton-srv-04.perf.couchbase.com
 
 [index]
-172.23.132.15
+triton-srv-05.perf.couchbase.com
 
 [n1ql]
-172.23.132.16
+triton-srv-06.perf.couchbase.com
 
 [clients]
-172.23.132.14
+triton-cnt-01.perf.couchbase.com
 
 [all:vars]
 ansible_user=root
