Kill Sync Gateway processes before uninstallation
Change-Id: Ia9748977b93093906d2a2dbb8add29a30bd83ba1
Reviewed-on: http://review.couchbase.org/86912
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Alex Gyryk <oleksandr.gyryk@couchbase.com>

--- a/playbooks/uninstall.yml
+++ b/playbooks/uninstall.yml
@@ -22,6 +22,7 @@
       - mongod
       - mongos
       - mysqld
+      - sync_gateway
 
   - name: uninstalling the database packages
     yum: state=absent name={{item}}
