Fix typo in variable name
Change-Id: I97e9c0865529bd043d96efe41f517e0809588c1f
Reviewed-on: http://review.couchbase.org/87062
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/playbooks/uninstall.yml
+++ b/playbooks/uninstall.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: kv:index:n1ql
   vars:
-    couhcbase_home: /opt/couchbase
+    couchbase_home: /opt/couchbase
     data_dir: /data
     index_dir: /index
   tasks:
@@ -32,7 +32,7 @@
       - 'MariaDB*'
 
   - name: removing Couchbase Server files
-    file: path={{ couhcbase_home }} state=absent
+    file: path={{ couchbase_home }} state=absent
 
   - name: removing the files remaining in the "{{ data_dir }}" directory
     shell: rm -fr {{ data_dir }}/*
