--- a/perfrunner/utils/syncgateway/configs/hebe_channels_noxa.config
+++ b/perfrunner/utils/syncgateway/configs/hebe_channels_noxa.config
@@ -6,7 +6,7 @@
       "bucket": "bucket-1",
       "username": "bucket-1",
       "password": "password",
-      "enable_shared_bucket_access": true,
+      "enable_shared_bucket_access": false,
       "users": { "GUEST": { "disabled": true, "admin_channels": ["*"] }
                },
       "sync" : ` function (doc) { channel(doc.channels); } `
