Support c4 and c5 instances
Change-Id: I0dae80c96bb12261dc976be3aef518ae4c9d43e8
Reviewed-on: http://review.couchbase.org/87548
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/playbooks/ec2.yml
+++ b/playbooks/ec2.yml
@@ -4,6 +4,14 @@
     data_dir: /data
     disk: /dev/xvdb
   tasks:
+  - stat: path=/dev/nvme1n1
+    register: nvme
+
+  - name: using NVME drive if it's available
+    set_fact:
+      disk: /dev/nvme1n1
+    when: nvme.stat.exists
+
   - name: re-creating filesystem
     filesystem:
       fstype: "xfs"
