CBPS-407: Enable IPv6 on Triton by default
Change-Id: I8c37a10b52dcea3ca5bef084f3249e9fbd868d0d
Reviewed-on: http://review.couchbase.org/88038
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>
Tested-by: Build Bot <build@couchbase.com>

--- a/clusters/triton.ini
+++ b/clusters/triton.ini
@@ -1,14 +1,14 @@
 [kv]
-triton-srv-01.perf.couchbase.com
-triton-srv-02.perf.couchbase.com
-triton-srv-03.perf.couchbase.com
-triton-srv-04.perf.couchbase.com
+triton-srv-01-ip6.perf.couchbase.com
+triton-srv-02-ip6.perf.couchbase.com
+triton-srv-03-ip6.perf.couchbase.com
+triton-srv-04-ip6.perf.couchbase.com
 
 [index]
-triton-srv-05.perf.couchbase.com
+triton-srv-05-ip6.perf.couchbase.com
 
 [n1ql]
-triton-srv-06.perf.couchbase.com
+triton-srv-06-ip6.perf.couchbase.com
 
 [clients]
 triton-cnt-01.perf.couchbase.com
