CBPS-407: Use FQDN in Zeus cluster specifications
Change-Id: Ida8438efb62c5beee8600f31d65ebfbcc1078b60
Reviewed-on: http://review.couchbase.org/88042
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/clusters/zeus.ini
+++ b/clusters/zeus.ini
@@ -1,15 +1,15 @@
 [kv]
-172.23.96.25
-172.23.96.26
-172.23.96.27
-172.23.96.28
+zeus-srv-01.perf.couchbase.com
+zeus-srv-02.perf.couchbase.com
+zeus-srv-03.perf.couchbase.com
+zeus-srv-04.perf.couchbase.com
 
 [n1ql]
-172.23.100.210
-172.23.100.211
+zeus-srv-05.perf.couchbase.com
+zeus-srv-06.perf.couchbase.com
 
 [clients]
-172.23.100.212  ansible_user=root ansible_ssh_pass=couchbase
+zeus-cnt-01.perf.couchbase.com  ansible_user=root ansible_ssh_pass=couchbase
 
 [all:vars]
 ansible_user=Administrator
