CBPS-407: Use FQDN in Leto cluster specifications
Change-Id: I0ec21d609c9cae5594bd322fdc9148c573f0d6f6
Reviewed-on: http://review.couchbase.org/88259
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/clusters/leto.ini
+++ b/clusters/leto.ini
@@ -1,11 +1,11 @@
 [kv]
-172.23.100.29
-172.23.100.30
-172.23.100.31
-172.23.100.32
+leto-srv-01.perf.couchbase.com
+leto-srv-02.perf.couchbase.com
+leto-srv-03.perf.couchbase.com
+leto-srv-04.perf.couchbase.com
 
 [clients]
-172.23.100.213
+leto-cnt-01.perf.couchbase.com
 
 [all:vars]
 ansible_user=root
