--- a/perfrunner/utils/syncgateway/configs/hebe_access.config
+++ b/perfrunner/utils/syncgateway/configs/hebe_access.config
@@ -19,7 +19,47 @@
                     access(doc.accessTo6, doc.access6);
                     access(doc.accessTo7, doc.access7);
                     access(doc.accessTo8, doc.access8);
-                    access(doc.accessTo9, doc.access9); } `
+                    access(doc.accessTo9, doc.access9);
+                    access(doc.accessTo10, doc.access10);
+                    access(doc.accessTo11, doc.access11);
+                    access(doc.accessTo12, doc.access12);
+                    access(doc.accessTo13, doc.access13);
+                    access(doc.accessTo14, doc.access14);
+                    access(doc.accessTo15, doc.access15);
+                    access(doc.accessTo16, doc.access16);
+                    access(doc.accessTo17, doc.access17);
+                    access(doc.accessTo18, doc.access18);
+                    access(doc.accessTo19, doc.access19);
+                    access(doc.accessTo20, doc.access20);
+                    access(doc.accessTo21, doc.access21);
+                    access(doc.accessTo22, doc.access22);
+                    access(doc.accessTo23, doc.access23);
+                    access(doc.accessTo24, doc.access24);
+                    access(doc.accessTo25, doc.access25);
+                    access(doc.accessTo26, doc.access26);
+                    access(doc.accessTo27, doc.access27);
+                    access(doc.accessTo28, doc.access28);
+                    access(doc.accessTo29, doc.access29);
+                    access(doc.accessTo30, doc.access30);
+                    access(doc.accessTo31, doc.access31);
+                    access(doc.accessTo32, doc.access32);
+                    access(doc.accessTo33, doc.access33);
+                    access(doc.accessTo34, doc.access34);
+                    access(doc.accessTo35, doc.access35);
+                    access(doc.accessTo36, doc.access36);
+                    access(doc.accessTo37, doc.access37);
+                    access(doc.accessTo38, doc.access38);
+                    access(doc.accessTo39, doc.access39);
+                    access(doc.accessTo40, doc.access40);
+                    access(doc.accessTo41, doc.access41);
+                    access(doc.accessTo42, doc.access42);
+                    access(doc.accessTo43, doc.access43);
+                    access(doc.accessTo44, doc.access44);
+                    access(doc.accessTo45, doc.access45);
+                    access(doc.accessTo46, doc.access46);
+                    access(doc.accessTo47, doc.access47);
+                    access(doc.accessTo48, doc.access48);
+                    access(doc.accessTo49, doc.access49); } `
     }
   }
 }
