CBPS-447: Add new servers to Oceanus cluster
Change-Id: I7210c6c88e2889f570e943fc82cf02b68b5c1ca5
Reviewed-on: http://review.couchbase.org/90465
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/playbooks/init.yml
+++ b/playbooks/init.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: kv:index:n1ql
+- hosts: kv:index:n1ql:analytics
   tasks:
   - name: upgrading packages on the system
     yum: state=latest name=epel-release
@@ -27,7 +27,7 @@
       - vim
       - wget
 
-- hosts: kv:index:n1ql
+- hosts: kv:index:n1ql:analytics
   tasks:
   - name: creating new "couchbase" group
     group: name=couchbase
