--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ python-snappy==0.5.1
 requests==2.1.0
 spooky==2.0.0
 sqlalchemy==1.1.7
+sshtunnel==0.1.3
 twisted==16.2.0
 validators==0.12.0
 xmltodict==0.11.0
