--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ pep8-naming==0.5.0
 psutil==5.2.2
 pydocstyle==2.1.1
 pycrypto==2.6.1
+python-dateutil==2.6.1
 python-snappy==0.5.1
 requests==2.1.0
 spooky==2.0.0
