List libcurl4-gnutls-dev as a dependency
Change-Id: I26ed29d8d587c88eafc7bcccf90bbfb942c1183c
Reviewed-on: http://review.couchbase.org/92732
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:16.04
 MAINTAINER Pavel Paulau <pavel@couchbase.com>
 
 RUN apt update && apt upgrade -y
-RUN apt install -y build-essential git libffi-dev libsnappy-dev libssl-dev lsb-core python3-dev python-pip python-virtualenv wget
+RUN apt install -y build-essential git libcurl4-gnutls-dev libffi-dev libsnappy-dev libssl-dev lsb-core python3-dev python-pip python-virtualenv wget
 
 RUN wget http://packages.couchbase.com/releases/couchbase-release/couchbase-release-1.0-4-amd64.deb
 RUN dpkg -i couchbase-release-1.0-4-amd64.deb
