--- a/playbooks/clients.yml
+++ b/playbooks/clients.yml
@@ -11,6 +11,7 @@
       - git
       - golang-go
       - htop
+      - libcurl4-gnutls-dev
       - libffi-dev
       - libsnappy-dev
       - libssl-dev
