--- a/perfrunner/utils/syncgateway/configs/hebe_channels.config
+++ b/perfrunner/utils/syncgateway/configs/hebe_channels.config
@@ -1,5 +1,8 @@
 {
   "adminInterface": "0.0.0.0:4985",
+   "logging": {
+    "logFilePath": "/var/tmp/sglogs"
+  },
   "databases": {
     "db": {
       "server": "http://172.23.100.190:8091",
