--- a/perfrunner/utils/syncgateway/configs/hebe_xattr_sync_nocache.config
+++ b/perfrunner/utils/syncgateway/configs/hebe_xattr_sync_nocache.config
@@ -14,7 +14,7 @@
                },
       "cache" : {
         "channel_cache_max_length": 1,
-        "channel_cache_min_length": 1,
+        "channel_cache_min_length": 1
       },
       "sync" : ` function (doc) { channel(doc.channels); } `
     }
