--- a/perfrunner/utils/syncgateway/configs/hebe_access_simple_nocache.config
+++ b/perfrunner/utils/syncgateway/configs/hebe_access_simple_nocache.config
@@ -12,6 +12,10 @@
       "enable_shared_bucket_access": true,
       "users": { "GUEST": { "disabled": true, "admin_channels": ["*"] }
                },
+      "cache" : {
+        "channel_cache_max_length": 1,
+        "channel_cache_min_length": 1
+      },
       "sync" : ` function(doc, oldDoc) {
                     access(doc.accessTo, doc.access);
                 } `
