Implement Jenkins build scanner
Change-Id: Ibab333986989d4fc6ce76c4fb3d1e84e7eb887b9
Reviewed-on: http://review.couchbase.org/94431
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Pavel Paulau <pavel.paulau@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ psutil==5.2.2
 pydocstyle==2.1.1
 pycrypto==2.6.1
 python-dateutil==2.6.1
+python-jenkins==1.0.0
 python-snappy==0.5.1
 requests==2.18.4
 spooky==2.0.0
