additional logging configs - amend

--- a/perfrunner/utils/syncgateway/configs/hebe_xattr_sync_logex.config
+++ b/perfrunner/utils/syncgateway/configs/hebe_xattr_sync_logex.config
@@ -3,14 +3,10 @@
  "logging": {
     "log_file_path": "/var/tmp/sglogs",
     "error": {
-      "enabled": true,
-      "rotation": {
-        "max_size": 20,
-        "max_age": 180
-      }
+      "enabled": false
     },
     "warn": {
-      "enabled": false,
+      "enabled": false
     },
     "info": {
       "enabled": false
