create fully disabled logging config

--- a/perfrunner/utils/syncgateway/configs/hebe_xattr_sync_logging_disabled.config
+++ b/perfrunner/utils/syncgateway/configs/hebe_xattr_sync_logging_disabled.config
@@ -1,7 +1,11 @@
 {
   "adminInterface": "0.0.0.0:4985",
- "logging": {
+  "logging": {
     "log_file_path": "/var/tmp/sglogs",
+    "console": {
+      "log_level": "none",
+      "log_keys": [],
+    },
     "error": {
       "enabled": false
     },
@@ -14,7 +18,7 @@
     "debug": {
       "enabled": false
     }
-  },
+  }
   "databases": {
     "db": {
       "server": "http://172.23.100.190:8091",
