--- a/perfrunner/utils/syncgateway/configs/hebe_xattr_sync_logging_disabled.config
+++ b/perfrunner/utils/syncgateway/configs/hebe_xattr_sync_logging_disabled.config
@@ -4,7 +4,7 @@
     "log_file_path": "/var/tmp/sglogs",
     "console": {
       "log_level": "none",
-      "log_keys": [],
+      "log_keys": []
     },
     "error": {
       "enabled": false
