Do not run trim command for hdd
Change-Id: I09b93cdf85c41f514e1c0def8a1e0335812eab0d
Reviewed-on: http://review.couchbase.org/100250
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Alex Gyryk <oleksandr.gyryk@couchbase.com>

--- a/playbooks/trim.yml
+++ b/playbooks/trim.yml
@@ -4,6 +4,7 @@
     data_dir: /data
     disk: /dev/sdb1
     opts: ""
+    to_trim: 1
   tasks:
   - name: umounting data parition
     mount:
@@ -28,3 +29,4 @@
 
   - name: discarding unused blocks
     shell: fstrim -v {{ data_dir }}
+    when: to_trim == 1
