--- a/playbooks/reset_mem.yml
+++ b/playbooks/reset_mem.yml
@@ -2,6 +2,7 @@
 - hosts: kv:index
   vars:
     grub_cfg: /boot/grub2/grub.cfg
+    grub_cfg2: /boot/efi/EFI/centos/grub.cfg
     grub_defaults: /etc/default/grub
 
   tasks:
@@ -15,7 +16,8 @@
     when: grep.stdout
 
   - name: applying new GRUB settings
-    shell: grub2-mkconfig -o {{ grub_cfg }}
+    shell: grub2-mkconfig -o {{ grub_cfg }} && grub2-mkconfig -o {{ grub_cfg2 }}
+    ignore_errors: yes
     when: grep.stdout
 
   - name: restarting servers
